objects/project_cloud__Project__c.object
<CustomObject>
    <description>Top level information about the project such as the name of the project, project manager, and project start and end dates.</description>
    <fields>
        <fullName>AME_project_cloud_Backlog__c</fullName>
        <label>Backlog?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Class A</fullName>
                </value>
                <value>
                    <fullName>Class B</fullName>
                </value>
                <value>
                    <fullName>Class C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Development_Effort__c</fullName>
        <label>Development Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Effort_in_man_days__c</fullName>
        <label>Effort (in man days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Health_Reason_Expanded__c</fullName>
        <label>Health Reason Expanded</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Last_Planned_End__c</fullName>
        <label>Last Planned End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Last_Planned_Start__c</fullName>
        <label>Last Planned Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Original_Planned_End__c</fullName>
        <label>Original Planned End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Original_Planned_Start__c</fullName>
        <label>Original Planned Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project_Class__c</fullName>
        <label>Project Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A (Large Project)</fullName>
                </value>
                <value>
                    <fullName>B (Medium Project)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project_Code__c</fullName>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Project Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Region A</fullName>
                </value>
                <value>
                    <fullName>Region B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Release_ID__c</fullName>
        <label>Release ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Restricted_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected this Project&apos;s access is restricted to predetermined set of users.</description>
        <label>Restricted Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Not Started - Late</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Progress - Late</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Post Go Live Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPE_Adjust_Project_Timeline__c</fullName>
        <label>Adjust Project Timeline</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPE_Affiliate__c</fullName>
        <label>Affiliate</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPE_Create_and_Link_Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create and Link Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPE_External_Project_View__c</fullName>
        <formula>HYPERLINK(&quot;http://pernod-ricard.force.com/externalprojectview?id=&quot; &amp;Id, &quot;External Project View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Project View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPE_Microsoft_Team__c</fullName>
        <label>Microsoft Team</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CCPE_Minimum_Cannot_Start_Before_Date__c</fullName>
        <label>Minimum Cannot Start Before Date</label>
        <summarizedField>project_cloud__Project_Phase__c.CCPE_Minimum_Cannot_Start_Before_Date__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCPE_Minimum_Cannot_Start_Before_Text__c</fullName>
        <formula>TEXT(YEAR(CCPE_Minimum_Cannot_Start_Before_Date__c)) &amp; &quot;-&quot; &amp;
TEXT(MONTH(CCPE_Minimum_Cannot_Start_Before_Date__c)) &amp; &quot;-&quot; &amp;
TEXT(DAY(CCPE_Minimum_Cannot_Start_Before_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Cannot Start Before Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPE_Project_Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charter</label>
        <referenceTo>AME_project_cloud_Project_Charter__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPE_Region_old__c</fullName>
        <formula>ccpe_bmc__Incident__r.BMC_RF_Region_old__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPE_Total_Actual_Amount__c</fullName>
        <formula>CCPE_Project_Charter__r.CCPE_Total_Actual_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPE_Total_Budgeted_Amount__c</fullName>
        <formula>CCPE_Project_Charter__r.CCPE_Total_Budgeted_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budgeted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_bmc__Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_bmc__Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Approved_Budget__c</fullName>
        <inlineHelpText>A Currency field used indicate the budgeted amount that has been authorized for the project.</inlineHelpText>
        <label>Approved Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Autonomous_End__c</fullName>
        <description>User entered value indicating the desired end date of the Project.</description>
        <inlineHelpText>The end date desired for the Project.</inlineHelpText>
        <label>Desired End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Autonomous_Start__c</fullName>
        <description>User entered value indicating the desired start date of the Project.</description>
        <inlineHelpText>The start date desired for the Project.</inlineHelpText>
        <label>Desired Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Benefits_Planned__c</fullName>
        <inlineHelpText>A Currency field used indicate the total amount of planned benefits on a project. When entering financial benefit records, this field will summarize related expense records with the &quot;Planned&quot; type or allows for manual entry.</inlineHelpText>
        <label>Total Planned Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Benefits_Realized__c</fullName>
        <inlineHelpText>A Currency field used indicate the total amount of planned benefits on a project. When entering financial benefit records, this field will summarize related expense records with the &quot;Realized&quot; type or allows for manual entry.</inlineHelpText>
        <label>Total Realized Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Budget_Status__c</fullName>
        <inlineHelpText>A picklist field used to indicate the status of the budget.</inlineHelpText>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The &apos;Business Unit&apos; within the company that this project is related to</inlineHelpText>
        <label>Business Unit</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The business unit selected is not a child business unit, please select a business unit which belongs to a parent business unit</errorMessage>
            <filterItems>
                <field>project_cloud__Business_Unit__c.project_cloud__Parent__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Search for a child business unit which belongs to a parent business unit</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Business_Unit__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Calculated_End__c</fullName>
        <description>This is the calculated end date for the project. It is the earlier of the end date of the earliest task and the desired end date of the project</description>
        <formula>IF(ISBLANK(project_cloud__End__c), project_cloud__Autonomous_End__c, IF(project_cloud__Autonomous_End__c &gt; project_cloud__End__c, project_cloud__Autonomous_End__c, project_cloud__End__c))</formula>
        <inlineHelpText>The calculated end date of the Project, derived from the Desired End Date and the Calculated End Date of the latest Project Task.</inlineHelpText>
        <label>Calculated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Calculated_Start__c</fullName>
        <description>This is the calculated start date for the project. It is the earlier of the start date of the earliest task and the desired start date of the project</description>
        <formula>IF(ISBLANK(project_cloud__Start__c), project_cloud__Autonomous_Start__c, IF(project_cloud__Autonomous_Start__c &lt; project_cloud__Start__c, project_cloud__Autonomous_Start__c, project_cloud__Start__c))</formula>
        <inlineHelpText>The calculated start date of the Project, derived from the Desired Start Date and the Calculated Start Date of the earliest Project Task.</inlineHelpText>
        <label>Calculated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a system field indicating which project template (or project) this project was cloned from</description>
        <label>Cloned From</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Cloned Projects</relationshipLabel>
        <relationshipName>Cloned_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completion (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Customer_Collaboration_Group_Id__c</fullName>
        <description>Relationships to the CollaborationGroup objects are not permitted, so a text field containing the Salesforce Id is used instead.</description>
        <inlineHelpText>The value of this field should be the Salesforce Id of the chatter group you wish to link to this Project.</inlineHelpText>
        <label>Customer Collaboration Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Duration_IsWorking__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Duration In Working Days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Duration__c</fullName>
        <label>Duration (days)</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Duration__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <description>Rollup summary of the Project Task End dates. The Sprint End Dates on the Project Phases are not used when determining this date</description>
        <inlineHelpText>The end date of the project derived from the latest ending project phase. The Sprint End Dates on the Project Phase&apos;s are not used when determining this date</inlineHelpText>
        <label>Project End Date</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__End__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Estimated_Hours__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Expenses_Actual__c</fullName>
        <label>Total Actual Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Expenses_Budgeted__c</fullName>
        <label>Total Budgeted Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Functional_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The &apos;Functional Area&apos; of the business that this project is related to</inlineHelpText>
        <label>Functional Area</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The functional area selected is not a child functional area, please select a functional area which belongs to a parent functional area</errorMessage>
            <filterItems>
                <field>project_cloud__Functional_Area__c.project_cloud__Parent__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Search for a child functional which belongs to a parent functional area</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Functional_Area__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health_Image__c</fullName>
        <formula>IMAGE(
	CASE(project_cloud__Health__c,
		&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
		&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;,
		&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,
		&quot;/s.gif&quot;),
&quot;Health Status&quot;)</formula>
        <label>Health (Traffic Light)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health_Reason__c</fullName>
        <description>When the Health of a Project Task is changed a reason is required.</description>
        <label>Health Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health__c</fullName>
        <description>Determines the health of the Project Task, and defines the Traffic Light formula</description>
        <label>Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Hide_Timecard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allows the project to be hidden from the timecard so users cannot enter time to the project or it&apos;s phases or tasks.</inlineHelpText>
        <label>Hide on Timecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Block__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The unit of time the Project Task&apos;s length must fit into. For example if the unit is 4 a task must be 4, 8 12 hours etc. The same rule applies to Time Entry objects. This is a system field and should never be modified.
(Cloud Coach 21-JUL-11)</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Hours Block</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_In_Day__c</fullName>
        <defaultValue>8</defaultValue>
        <description>This is the value used for the calculation of a project task end date. Currently defaults to 8 which is the standard number of hours in a working day. This is a system field and should never be modified.
(Cloud Coach 21-JUL-11)</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Hours In Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsManual_Completed_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually Populate Completed Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsOnly_Subscriptions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the resourcing scheme for the Project only using Subscriptions. This will control the Project Task Resourcing page features.</description>
        <label>Only Subscriptions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this project can be used as a Project Template</description>
        <inlineHelpText>Check this box if this project can be used as a Project Template</inlineHelpText>
        <label>Project Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Friday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Friday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Monday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Monday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value indicating if Saturday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value indicating if Sunday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Thursday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Thursday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Tuesday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Tuesday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Wednesday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Wednesday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Late_Ending_Tasks__c</fullName>
        <description>Boolean value indicating if the Project has Tasks that end late.</description>
        <formula>project_cloud__Late_Task_End__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When checked, indicates if the project includes tasks with a &quot;Late&quot; status.</inlineHelpText>
        <label>Late Ending Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Late_Starting_Tasks__c</fullName>
        <description>Boolean value indicating if the Project has Tasks that start late.</description>
        <formula>project_cloud__Late_Task_Start__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When checked, indicates that the project has tasks with a &quot;Not Started - Late&quot; status.</inlineHelpText>
        <label>Late Starting Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Late_Task_End__c</fullName>
        <description>The end date of the first task that is &quot;In Progress&quot;.</description>
        <inlineHelpText>Shows the calculated end date of the first task with an &quot;In Progress&quot; status.</inlineHelpText>
        <label>Late Ending Task Date (System)</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Late_Task_End__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Late_Task_Start__c</fullName>
        <description>The start date of the first unstarted task.</description>
        <inlineHelpText>Shows the calculated start date of the first task with a &quot;Not Started&quot; status.</inlineHelpText>
        <label>Late Starting Task Date (System)</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Late_Task_Start__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Methodology__c</fullName>
        <label>Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kanban</fullName>
                </value>
                <value>
                    <fullName>Waterfall</fullName>
                    <default>true</default>
                    <label>Waterfall</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Milestone_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone Process</label>
        <referenceTo>project_cloud__Milestone_Process__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Monthly_Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this restricts the monthly budget to a single value per month per cost area, allowing for spreadsheet like entry of the project budget.</inlineHelpText>
        <label>Single Monthly Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Phase_Status_Maximum__c</fullName>
        <description>System calculated field used to derive the overall project status. This is a system field and should not be visible. The status field is what should be used</description>
        <inlineHelpText>This is a system field and does not be visible. The status field is what should be used</inlineHelpText>
        <label>Phase Status Maximum</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Task_Status_Maximum__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Phase_Status_Minimum__c</fullName>
        <description>System calculated field used to derive the overall project status. This is a system field and should not be visible. The status field is what should be used.</description>
        <inlineHelpText>This is a system field and does not be visible. The status field is what should be used.</inlineHelpText>
        <label>Phase Status Minimum</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Task_Status_Minimum__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charter</label>
        <referenceTo>project_cloud__Charter__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Duration__c</fullName>
        <description>The number of days between the start and end date of the Project. When the project doesn&apos;t have a start end end date the value is 0, when just an End date is missing use today as the end date</description>
        <formula>IF(ISBLANK(project_cloud__Calculated_End__c),
	IF(ISBLANK(project_cloud__Calculated_Start__c),
		/*When there is no start or end the length of the project is 0*/
		0
	,/*ELSE*/
		/*When there is a start date but no end date (not theoretically possible) use todays date as the end*/
		TODAY() -  project_cloud__Calculated_Start__c
	)
,/*ELSE*/
	project_cloud__Calculated_End__c -  project_cloud__Calculated_Start__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The duration of the project in days, calculated from the start and end dates of the project</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>